# rnd-doi

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  minio.sh  pyproject.toml  run.py  startup.sh
.devcontainer/: devcontainer.json
src/: main.py
src/auth/: auth_bearer.py  auth_handler.py
src/constants/: error_code.py  image.py  logger.py
src/core/patterns/: singleton.py
src/core/templates/: fastapi_minio.py
src/databases/: get_db_instance.py
src/events/: startup.py
src/exceptions/: error_response_exception.py  exception_handler.py
src/models/: food.py  order.py  users.py  utils.py
src/routers/menu/: utils.py  views.py
src/routers/users/: views.py
src/schemas/: food.py  order.py  response.py  users.py
src/settings/: app_settings.py  auth_settings.py  minio_settings.py
