[tool.poetry]
name = "rnd-doi"
version = "0.1.0"
description = ""
authors = ["tuannamnguyen <tuannamnguyen290602@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.2"}
pre-commit = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
