[tool.poetry]
name = "rnd-doi"
version = "0.1.0"
description = ""
authors = ["tuannamnguyen <tuannamnguyen290602@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.2"}
pre-commit = "^3.4.0"
motor = "^3.3.1"
umongo = "^3.1.0"
pydantic-settings = "^2.0.3"
minio = "^7.1.17"
python-multipart = "^0.0.6"
pyjwt = "^2.8.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
